[package]
name = "analog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bip39 = "0.8.2"
bs58 = "0.4.0"
clap = "2.33"
dirs-next = "2.0.0"
num_cpus = "1.13.0"
bip32 = "0.2.2"
rand_core = { version = "0.6", features = ["std"] }


[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]