[package]
name = "tomerge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring-compat = "0.4.0"
bip32 = "0.2.2"
rusqlite = "0.26.3"
rand_core = { version = "0.6", features = ["std"] }
bs58 = "0.4.0"
hex = "0.4.3"
uuid = "0.8.2"
ed25519 = "1.3.0"