[package]
name = "solstake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solstake"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
spl-token = "3.2.0"
borsh = "0.9.1"